--- a/style3.css
+++ b/style3.css
@@ -22,3 +22,7 @@ body {
     background-color: rgba(255, 255, 255, 0.472);
     width: 200px;
 }
+.ropa {
+    background-color: rgba(255, 255, 255, 0.472);
+    width: 200px;
+}
